fixed map overflow :world_map:

--- a/styles/sass/_contact.scss
+++ b/styles/sass/_contact.scss
@@ -1,6 +1,7 @@
 .contactTriangleTop {
   border-left: 100vw solid rgb(73, 211, 142);
   border-top: 50vh solid white;
+  outline: none;
 }
 
 .contactInfo {
