--- a/styles/sass/_hero.scss
+++ b/styles/sass/_hero.scss
@@ -17,6 +17,7 @@ header {
   border-top: 20vh solid transparent;
   position: absolute;
   bottom: 0;
+    outline: transparent;
 }
 
 .rightHeroTriangle {
@@ -27,6 +28,7 @@ header {
   position: absolute;
   bottom: 0;
   right: 0;
+    outline: transparent;
 }
 
 .iAmA {
