--- a/styles/styles.css
+++ b/styles/styles.css
@@ -334,6 +334,7 @@ header {
   border-top: 20vh solid transparent;
   position: absolute;
   bottom: 0;
+  outline: transparent;
 }
 
 .rightHeroTriangle {
@@ -344,6 +345,7 @@ header {
   position: absolute;
   bottom: 0;
   right: 0;
+  outline: transparent;
 }
 
 .iAmA {
@@ -644,6 +646,7 @@ header {
 .contactTriangleTop {
   border-left: 100vw solid #49d38e;
   border-top: 50vh solid white;
+  outline: none;
 }
 
 .contactInfo {
